@@ -1289,6 +1289,9 @@ Release 0.23.0 - Unreleased
    MAPREDUCE-2995. Fixed race condition in ContainerLauncher. (vinodkv via 
    acmurthy) 
 
+   MAPREDUCE-2949. Fixed NodeManager to shut-down correctly if a service
+   startup fails. (Ravi Teja via vinodkv)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
